--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <title>React Calculator</title>
+    <title>Math Magiciansr</title>
   </head>
   <body>
     <div id="root"></div>
